    check directory upload with path /data/upload
       if hardlink > 32000 then alert

New: Issue #1070: Added the system boot time and uptime to the XML interface. Thanks
to Lutz Mader.

New: Added support to add Monit to M/Monit hostgroup. Example:
 set mmonit
     https://monit:mypassword@mmonit.foo.bar:8443/collector
     with hostgroups [ Oslo, "Mail servers" ]

New: Set the header X-Content-Type-Options to prevent MIME type sniffing. Thanks to Christian Goettsche.

New: Added support for debugging TLS/SSL connections with Wireshark. It is now possible to set the
     SSLKEYLOGFILE=<path> environment variable when starting Monit, to log the master secret to a file,
     which can be used by Wireshark in "Settings -> Protocols -> TLS -> (Pre)-Master-Secret log filename".
     Note: The SSLKEYLOGFILE functionality is enabled only in the monit debug mode (when monit was started
     with the -v option).

Fixed: Issue #1082: Wrong error message for the uptime test. Thanks to Lutz Mader.

Fixed: Disable SSL session renegotiation in the Monit HTTP interface (CVE-2011-1473).

Fixed: Monit reported wrong number of CPUs in the VMWare virtual host in Debian 12.x

Fixed: Issue #1086: The HTTP protocol test may return false error "HTTP error: invalid chunk size"
if the HTTP response contained header with more then 511 bytes. We have increased the limit
to 8192 bytes per header and will report "response header exceeded maximum size" error if
the HTTP response contains longer header.

Fixed: When the monit ID is generated in first start and the system is shut down before the
file was stored to the filesystem, an empty monitid file may be created. Thanks to Alexander Dahl
for fix.

Fixed: The SSL connection can be sporadically interrupted.

Fixed: Issue #1101: Updated configuration examples for PAM in the Monit manual. Thanks to Lutz Mader.


Version 5.33.0

New: Added clickjacking protection headers to Monit HTTP GUI (SAMEORIGIN iframe is allowed).
