@@ -1964,6 +1964,21 @@ State_Type check_program(Service_T s) {
                                 Event_post(s, Event_Content, State_ChangedNot, ml->action,  "content doesn't match on program output:\n%s", lastOutput);
                 }
 
+                // Check if the program output content changed
+                for (OutputChange_T oc = s->outputchangelist; oc; oc = oc->next) {
+                        if (!oc->previous) {
+                                oc->previous = Str_dup(lastOutput);
+                        } else if (strcmp(oc->previous, lastOutput) == 0) {
+                                Event_post(s, Event_Content, oc->check_invers ? State_Failed : State_Succeeded, oc->action,
+                                           "content remained the same:\n<<<<<<< Begin\n%s\n>>>>>>> End", lastOutput);
+                        } else {
+                                Event_post(s, Event_Content, oc->check_invers ? State_Succeeded : State_Failed, oc->action,
+                                           "content changed:\n<<<<<<< Begin previous\n%s\n======= End previous - Begin current\n%s\n>>>>>>> End current", oc->previous, lastOutput);
+                                FREE(oc->previous);
+                                oc->previous = Str_dup(lastOutput);
+                        }
+                }
+
                 Process_free(&s->program->P);
         } else {
                 rv = State_Init;
